# rgw2api

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  rust_fmt.yml
src/: api_key.rs  coins.rs  dungeon.rs  lib.rs  uri.rs
src/dungeon/: info.rs  user.rs
