[package]
name = "rgw2api"
version = "0.1.0"
authors = ["alexFickle <alex.fickle@gmail.com>", "brandon phelps <brandon.phelps@mst.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_derive = "^1.0"
serde = "^1.0"